--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,9 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.1.0
-  provider: ^6.0.5
-  flutter_spinkit: ^5.2.0  
+  flutter_spinkit: ^5.2.0
+  flutter_bloc: ^8.1.3 
+  equatable: ^2.0.5 
 
  
   cupertino_icons: ^1.0.2
